addedauth service login authorization

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,7 +16,7 @@
           </div>
         <button
           type="button"
-          (click)="login(fullname.value,area.value, password.value)"
+          (click)="login(username.value,area.value, password.value)"
           class="btn btn-primary"
         >
           Login
