instaled jwt and moment

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,8 @@
-<div class="row mt-5">
+<div class="text-center">NEIGHBOURHOOD</div>
+
+<div class="row mt-6">
     <div class="col-md-8">
-      <h3 class="center">Log in</h3>
+      <h3 class="center">Log In</h3>
       <form>
         <div class="form-group">
           <label for="fullname">Name</label>
