--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,7 +20,7 @@
         </div>
         <div class="form-group form-check">
           <input type="checkbox" class="form-check-input" id="staff" />
-          <label class="form-check-label" for="staff">Staff</label>
+          <label class="form-check-label" for="staff">Admin</label>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
@@ -41,7 +41,7 @@
             <th scope="row"><a routerLink="/user/{{ i }}">View</a></th>
             <td>{{ user.username }}</td>
             <td>{{ user.email }}</td>
-            <td>{{ user.is_staff }}</td>
+            <!-- <td>{{ user.}}</td> -->
           </tr>
         </tbody>
       </table>
