made some chenges to navbar

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -9,7 +9,7 @@
 <!------ Include the above in your HEAD tag ---------->
 
 <head>
-  <title>Automated Donation</title>
+  <title>Neighbourhood</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -120,15 +120,15 @@
                       <div class="form-group">
                           
                           <div class="col-xs-6">
-                              <label for="email"><h4>Location</h4></label>
+                              <label for="email"><h4>Business</h4></label>
                               <input type="email" class="form-control" name="email" id="email" placeholder="somewhere" title="enter your email.">
                           </div>
                       </div>
                       <div class="form-group">
                           
                           <div class="col-xs-6">
-                              <label for="email"><h4>Organization</h4></label>
-                              <input type="email" class="form-control" id="location" placeholder="organization" title="enter a location">
+                              <label for="email"><h4>Area code</h4></label>
+                              <input type="email" class="form-control" id="location" placeholder="area" title="enter a location">
                           </div>
                       </div>
                   
