--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row mt-5">
     <div class="col-md-6">
-      <h3>Add Users</h3>
+      <h3>Add members</h3>
       <form>
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
@@ -11,7 +11,7 @@
             aria-describedby="emailHelp"
           />
           <small id="emailHelp" class="form-text text-muted"
-            >We'll never share your email with anyone else.</small
+            >Your credentials are protected</small
           >
         </div>
         <div class="form-group">
@@ -19,8 +19,8 @@
           <input type="text" class="form-control" id="username" />
         </div>
         <div class="form-group form-check">
-          <input type="checkbox" class="form-check-input" id="staff" />
-          <label class="form-check-label" for="staff">Admin</label>
+          <input type="checkbox" class="form-check-input" id="admin" />
+          <label class="form-check-label" for="admin">Admin</label>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
@@ -33,7 +33,6 @@
             <th scope="col">Link</th>
             <th scope="col">Username</th>
             <th scope="col">Email</th>
-            <th scope="col">Staff</th>
           </tr>
         </thead>
         <tbody>
@@ -41,7 +40,6 @@
             <th scope="row"><a routerLink="/user/{{ i }}">View</a></th>
             <td>{{ user.username }}</td>
             <td>{{ user.email }}</td>
-            <!-- <td>{{ user.}}</td> -->
           </tr>
         </tbody>
       </table>
