--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,22 +1,23 @@
-<div class="text-center">NEIGHBOURHOOD</div>
-
-<div class="row mt-6">
+<div class="text-center" id="dead" i>NEIGHBOURHOOD</div>
+<br>
+<div class="row " id="login">
   <div class="col-md-8">
-    <h3 class="text-center">Log In</h3>
+    <h3 class="text-center" id="head">Log In</h3>
     <form>
       <div class="form-group">
-        <label for="fullname">Name</label>
-        <input #username type="text" class="form-control" id="username" />
+        <label for="fullname"></label>
+        <input #username type="text" class="form-control" id="username" placeholder="fullname" />
       </div>
       <div class="form-group">
-        <label for="area">Area</label>
-        <input #area type="area" class="form-control" id="password" />
+        <label for="area"></label>
+        <input #area type="area" class="form-control" id="password" placeholder="area" />
       </div>
       <div class="form-group">
-        <label for="username">Password</label>
-        <input #password type="password" class="form-control" id="password" />
+        <label for="username"></label>
+        <input #password type="password" class="form-control" id="password" placeholder="password" />
       </div>
-      <button type="button" (click)="login(username.value,area.value, password.value)" class="btn btn-primary">
+      <button class="btn1" type="button" (click)="login(username.value,area.value, password.value)"
+        class="btn btn-primary">
         Login
       </button>
     </form>
