--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -4,9 +4,9 @@
   position: relative;
   margin: 0% auto;
   border-radius: 10px;
-  background: #29a0b0;
+  background:#29a0b0;
   box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
-    -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+    -8px -8px 12px 0 rgba(0, 0, 0, 0.3);
   overflow: hidden;
 }
 #dead {
@@ -17,7 +17,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 3px solid #097988;
+  border: 3px solid #29a0b0;
   /* transform: skew(1deg, 1deg); */
 }
 #dead:before {
@@ -35,7 +35,7 @@ input {
   font-size: 11px;
   color: #29a0b0;
   box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
-    -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+    -8px -8px 12px 0 rgba(0, 0, 0, 0.3);
 }
 #head {
   text-align: center;
@@ -51,7 +51,7 @@ button {
   background: #fc4322 !important;
   border-radius: 20px;
   box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
-    -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+    -8px -8px 12px 0 rgba(0, 0, 0, 0.25);
   transition: 0.5s;
 }
 button:hover {
