--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="image">
 <div class="text-center" id="dead" i>NEIGHBOURHOOD</div>
 <br>
 <div class="row " id="login">
@@ -22,4 +23,5 @@
       </button>
     </form>
   </div>
+</div>
 </div>
