--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,7 @@
-<div class="row mt-5">
+<app-navbar></app-navbar>
+
+<app-posts></app-posts>
+<!-- <div class="row mt-5">
     <div class="col-md-6">
       <h3>Add members</h3>
       <form>
@@ -45,4 +48,4 @@
       </table>
     </div>
   </div>
-  
+   -->
