--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,6 +6,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
+      <a class="nav-link" routerLink="/profile" routerLinkActive="active">Profile</a>
       <a class="nav-link" routerLink="/posts" routerLinkActive="active">Posts</a>
       <a class="nav-link" routerLink="/hood" routerLinkActive="active">Hood</a>
       <a class="nav-link" routerLink="/services" routerLinkActive="active">Services</a>
