--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -7,7 +7,7 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-
+<app-navbar></app-navbar>
 <head>
   <title>Neighbourhood</title>
   <meta charset="utf-8">
@@ -17,7 +17,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
-
+<app-navbar></app-navbar>
 <hr>
 <div class="container bootstrap snippet">
     <div class="row">
@@ -26,13 +26,13 @@
     <div class="row">
       <div class="col-sm-3"><!--left col-->
         <div class="text-center"></div>
-        <img src="http://lorempixel.com/200/200/people/9/" class="avatar img-circle img-thumbnail" alt="avatar">
+        <!-- <img src="http://lorempixel.com/200/200/people/9/" class="avatar img-circle img-thumbnail" alt="avatar"> -->
         <h6>Upload a different photo...</h6>    
         <input type="file" class="text-center center-block file-upload">  
         </div><!--/col-3-->
     	<div class="col-sm-9">
             <ul class="nav nav-tabs">
-                <li class="active"><a data-toggle="tab" href="#home">My Bio</a></li>
+                <li class="active"><a data-toggle="tab" href="//home">My Bio</a></li>
                 <li><a data-toggle="tab" href="#messages">Edit Profile</a></li>
                
               </ul>
@@ -53,13 +53,13 @@
                             <div class="form-group">
                               <label class="col-md-3 control-label">Username:</label>
                               <div class="col-md-8">
-                                <input class="form-control" value="janeuser" type="text">
+                                <input class="form-control" value="mauroeuser" type="text">
                               </div>
                             </div>
                             <div class="form-group">
                               <label class="col-lg-3 control-label">Email:</label>
                               <div class="col-lg-8">
-                                <input class="form-control" value="janesemail@gmail.com" type="text">
+                                <input class="form-control" value="mauroemail@gmail.com" type="text">
                               </div>
                             </div>
                             <div class="form-group">
