added profile service

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,171 +2,93 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
 <app-navbar></app-navbar>
-<head>
-  <title>Neighbourhood</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-
-<app-navbar></app-navbar>
-<hr>
-<div class="container bootstrap snippet">
+<div class="container emp-profile">
+  <form method="post">
     <div class="row">
-  		<div class="col-sm-10"><h1>User name</h1></div>
+      <div class="col-md-4">
+        <div class="profile-img">
+          <img
+            src=""
+            alt="" />
+          <!-- <div class="file btn btn-lg btn-primary" (click)="changeProfile"> -->
+            Change Photo
+            <input type="file" name="file" />
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="profile-head">
+          <h5>
+            "message"
+          </h5>
+          <h6>
+            "role"
+          </h6>
+          <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+                aria-selected="true">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
+                aria-selected="false">Timeline</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <input type="submit" class="profile-edit-btn" name="btnAddMore" value="Edit Profile" />
+      </div>
+    <div class="row">
+
+      <div class="col-md-8">
+        <div class="tab-content profile-tab" id="myTabContent">
+          <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+            <div class="row">
+              <div class="col-md-6">
+                <label>User Id</label>
+              </div>
+              <div class="col-md-6">
+                <p>Email</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label>Name</label>
+              </div>
+              <div class="col-md-6">
+                <p>Kshiti Ghelani</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label>Email</label>
+              </div>
+              <div class="col-md-6">
+                <p>kshitighelani@gmail.com</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label>Phone</label>
+              </div>
+              <div class="col-md-6">
+                <p>123 456 7890</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label>Profession</label>
+              </div>
+              <div class="col-md-6">
+                <p>Web Developer and Designer</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
     </div>
-    <div class="row">
-      <div class="col-sm-3"><!--left col-->
-        <div class="text-center"></div>
-        <!-- <img src="http://lorempixel.com/200/200/people/9/" class="avatar img-circle img-thumbnail" alt="avatar"> -->
-        <h6>Upload a different photo...</h6>    
-        <input type="file" class="text-center center-block file-upload">  
-        </div><!--/col-3-->
-    	<div class="col-sm-9">
-            <ul class="nav nav-tabs">
-                <li class="active"><a data-toggle="tab" href="//home">My Bio</a></li>
-                <li><a data-toggle="tab" href="#messages">Edit Profile</a></li>
-               
-              </ul>
-
-              
-          <div class="tab-content">
-            <div class="tab-pane active" id="home">
-                <hr>
-                  <form class="form" action="##" method="post" id="registrationForm">
-                    
-                      <div class="form-group">
-                          
-                        <div class="col-md-8 col-sm-6 col-xs-12 personal-info" id="details">
-
-                          <!-- <h3>My Bio</h3> -->
-                          <form class="form-horizontal" role="form">
-                      
-                            <div class="form-group">
-                              <label class="col-md-3 control-label">Username:</label>
-                              <div class="col-md-8">
-                                <input class="form-control" value="mauroeuser" type="text">
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="col-lg-3 control-label">Email:</label>
-                              <div class="col-lg-8">
-                                <input class="form-control" value="mauroemail@gmail.com" type="text">
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="col-lg-3 control-label">Description:</label>
-                              <div class="col-lg-8">
-                                <input class="form-control" value="Something about you" type="text">
-                              </div>
-                            </div>
-                       
-                            <div class="form-group">
-                              <label class="col-md-3 control-label"></label>
-                          
-                            </div>
-                          </form>
-                        </div>
-                      </div>
-
-              	</form>
-              
-              <hr>
-              
-             </div><!--/tab-pane-->
-             <div class="tab-pane" id="messages">
-               
-               <h2></h2>
-               
-               <hr>
-                  <form class="form" action="##" method="post" id="registrationForm">
-                      <div class="form-group">
-                          
-                          <div class="col-xs-6">
-                              <label for="first_name"><h4>First name</h4></label>
-                              <input type="text" class="form-control" name="first_name" id="first_name" placeholder="first name" title="enter your first name if any.">
-                          </div>
-                      </div>
-                      <div class="form-group">
-                          
-                          <div class="col-xs-6">
-                            <label for="last_name"><h4>Last name</h4></label>
-                              <input type="text" class="form-control" name="last_name" id="last_name" placeholder="last name" title="enter your last name if any.">
-                          </div>
-                      </div>
-          
-                      <div class="form-group">
-                          
-                          <div class="col-xs-6">
-                              <label for="phone"><h4>Username</h4></label>
-                              <input type="text" class="form-control" name="phone" id="phone" placeholder="username" title="enter your phone number if any.">
-                          </div>
-                      </div>
-          
-                      <div class="form-group">
-                          <div class="col-xs-6">
-                             <label for="mobile"><h4>Email</h4></label>
-                              <input type="text" class="form-control" name="mobile" id="mobile" placeholder="email" title="enter your mobile number if any.">
-                          </div>
-                      </div>
-                      <div class="form-group">
-                          
-                          <div class="col-xs-6">
-                              <label for="email"><h4>Business</h4></label>
-                              <input type="email" class="form-control" name="email" id="email" placeholder="somewhere" title="enter your email.">
-                          </div>
-                      </div>
-                      <div class="form-group">
-                          
-                          <div class="col-xs-6">
-                              <label for="email"><h4>Area code</h4></label>
-                              <input type="email" class="form-control" id="location" placeholder="area" title="enter a location">
-                          </div>
-                      </div>
-                  
-                      <div class="form-group">
-                          
-                        <div class="col-xs-6">
-                            <label for="email"><h4>Mobile Phone Number</h4></label>
-                            <input type="email" class="form-control" id="location" placeholder="mobile number" title="enter a location">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        
-                        <div class="col-xs-6">
-                            <label for="password"><h4>Descriptiom</h4></label>
-                            <input type="password" class="form-control" name="password" id="password" placeholder="something about you" title="enter your password.">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                          
-                      <div class="col-xs-6">
-                          <label for="password"><h4>Password</h4></label>
-                          <input type="password" class="form-control" name="password" id="password" placeholder="password" title="enter your password.">
-                      </div>
-                  </div>
-                      <div class="form-group">
-                          
-                          <div class="col-xs-6">
-                            <label for="password2"><h4> Confirm Password</h4></label>
-                              <input type="password" class="form-control" name="password2" id="password2" placeholder="confirm password" title="enter your password2.">
-                          </div>
-                      </div>
-                      <div class="form-group">
-                           <div class="col-xs-12">
-                                <br>
-                              	<button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save Changes</button>
-                               	<button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
-                            </div>
-                      </div>
-              	</form>
-               
-             </div>
+  </form>
+</div>
