--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,6 +21,10 @@
         class="btn btn-primary">
         Login
       </button>
+      <button class="btn1" type="button" (click)="signup()"
+      class="btn btn-primary">
+      Sign Up
+    </button>
     </form>
   </div>
 </div>
