--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,2 +1,11 @@
 <app-admin-navbar></app-admin-navbar>
+<!-- <form (ngSubmit)="findPost(),findUser(),findPost(),findPost()">
+    <div  class="form-group">
+
+      <input type="text" required class="" id="post"  name="username"
+        placeholder="Search for the anything">
+
+      <button type="submit" class="submit" name="button">Enter</button><span class="subscribe-span"> </span>
+    </div>
+  </form> -->
 
