--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,1 +1,10 @@
 <app-navbar></app-navbar>
+<!-- <form (ngSubmit)="findPost()">
+    <div  class="form-group">
+
+      <input type="text" required class="" id="post"  name="username"
+        placeholder="Search for the post">
+
+      <button type="submit" class="submit" name="button">Enter</button><span class="subscribe-span"> </span>
+    </div>
+  </form> -->
