--- a/src/app/business/business.component.html
+++ b/src/app/business/business.component.html
@@ -1,1 +1,10 @@
 <app-navbar></app-navbar>
+<!-- <form (ngSubmit)="findBusiness()">
+    <div  class="form-group">
+
+      <input type="text" required class="" id="post"  name="username"
+        placeholder="Search for the business">
+
+      <button type="submit" class="submit" name="button">Enter</button><span class="subscribe-span"> </span>
+    </div>
+  </form> -->
