--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+
 <div class="image">
 <div class="text-center" id="dead" i>NEIGHBOURHOOD</div>
 <br>
@@ -21,10 +22,10 @@
         class="btn btn-primary">
         Login
       </button>
-      <button class="btn1" type="button" (click)="signup()"
+      <!-- <button class="btn1" type="button" (click)="signup()"
       class="btn btn-primary">
       Sign Up
-    </button>
+    </button> -->
     </form>
   </div>
 </div>
