--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,1 +1,9 @@
 <app-navbar></app-navbar>
+<!-- <form (ngSubmit)="findService()">
+    <div class="form-group">
+
+        <input type="text" required class="" id="service" name="service" placeholder="Search for the service">
+
+        <button type="submit" class="submit" name="button">Enter</button><span class="subscribe-span"> </span>
+    </div>
+</form> -->
