--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
 <!-- <form (ngSubmit)="findPost()">
     <div  class="form-group">
 
@@ -7,4 +7,62 @@
 
       <button type="submit" class="submit" name="button">Enter</button><span class="subscribe-span"> </span>
     </div>
-  </form> -->
+</form> -->
+
+<!-- <div class="card" >
+    <div class="card-body" >
+        <blockquote class="blockquote mb-0 card-body">
+          <h5>Neighbourhoods</h5>
+          <table class="table table-striped" style="font-size: 15px;">
+            <thead>
+              <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Occupants</th>
+                <th scope="col">Location</th> -->
+                <!-- <th scope="col">Businesses</th> -->
+                <!-- <th scope="col">Contact</th>
+                <th scope="col">Account Action</th>
+                <th scope="col">Account Action</th>
+              </tr>
+            </thead> -->
+            <!-- <tbody>
+              <tr *ngFor="let hood of hood; index as i"> -->
+                <!-- <th scope="row"><a routerLink="/user/{{ i }}">View</a></th> -->
+                <!-- <td>{{hood.name }}</td>
+                <td>{{ hood.occupants }}</td>
+                <td>{{ hood.location }}</td>
+                <td>{{hood.emergencyNo}}</td> -->
+                <!-- <td><a href="" data-toggle="modal" data-target="#deleteProfile">Delete Neighbourhood</a></td> -->
+                <!-- <td><button (click)="hoodDelete(true)"> Delete</button></td> -->
+                <!-- <td><button > Edit</button></td> -->
+                
+                <!-- <td><a href="" data-toggle="modal" data-target="">Edit Neighbourhood Information</a></td> -->
+                <!-- Modal -->
+            <!-- <div class="modal fade" id="deleteProfile" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">  
+                            <h5 class="bolden"></h5>                                                      
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>                            
+                        </div>
+                        <div class="modal-body">
+                            <p>Are you sure you want to delete this neighbourhood??</p>
+                        </div>
+                        <div class="modal-footer">
+                            <a href=""><button type="button" class="btn btn-primary" (click)="hoodDelete(true)">I'm sure</button></a>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>                            
+                        </div>
+                    </div>
+                </div>
+            </div>   -->
+
+              <!-- </tr>
+            </tbody> -->
+          <!-- </table>
+          </blockquote>
+
+    </div>
+
+</div> -->
