--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,1 +1,65 @@
-<p>signup works!</p>
+ 
+<div class="image">
+    <div class="text-center" id="dead" i>NEIGHBOURHOOD</div>
+    <div class="row " id="login">
+      <div class="col-md-8">
+        <form>
+          <div class="form-group">
+            <label for="fullname"></label>
+ 
+          </div>
+          <div class="form-group">
+            <label for="area"></label>
+
+          </div>
+          <div class="form-group">
+            <label for="username"></label>
+          </div>
+          <form>
+            <h3 style="font-weight: bolder;">Sign Up</h3>
+            <p>Please fill in this form to create an account.</p>
+            <div class="form-group">
+                <label for="formGroupExampleInput"></label>
+                <input type="email" class="form-control" id="formGroupExampleInput" placeholder="Input Your Email">
+            </div>
+            <div class="form-group">
+                <label for="formGroupExampleInput2"></label>
+                <input #username type="text" class="form-control" id="username" placeholder="username" />
+            </div>
+            <div class="form-group">
+                <label for="formGroupExampleInput2"></label>
+                <input #password type="password" class="form-control" id="password" placeholder="password" />
+            </div>
+            <div class="form-group">
+                <label for="formGroupExampleInput2"></label>
+                <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="Confirm Password">
+            </div>
+            <button style="width: 100%; margin-top: 3%; margin-bottom: 5%;"
+            type="button"
+            (click)="signup(username.value,username.value,password.value)"
+            class="btn btn-primary"><a href="/posts"></a>
+            Signup
+          </button>
+            <p class="text-center" > Have an account? <a href="/login" style="color:#e4261f;">Sign in here</a></p> 
+            <!-- <button class="btn1" type="button" (click)="signup()"
+            class="btn btn-primary"></button> -->
+        </form>
+          
+          <!-- <button class="btn1" type="button" (click)="signup(username.value,area.value, password.value)"
+            class="btn btn-primary">
+            Login
+          </button> -->
+          <!-- <button class="btn1" type="button" (click)="signup()"
+          class="btn btn-primary">
+          Sign Up
+        </button> -->
+ </form>
+      </div>
+    </div>
+    </div>
+  
+<div class="container">
+    <div class="regForm">
+
+    </div>
+</div>
